--- a/src/app/pages/home-component/home-component.component.html
+++ b/src/app/pages/home-component/home-component.component.html
@@ -5,18 +5,25 @@
         <div class="row align-items-center">
             <div class="col-lg-5 col-md-12">
                 <div class="banner-wrapper-content">
-                    <span class="sub-title">SEO Agency</span>
-                    <h1 class="wow animate__animated animate__fadeInLeft" data-wow-delay="00ms" data-wow-duration="1000ms">Creative & Strategic Digital SEO Agency</h1>
-                    <p class="wow animate__animated animate__fadeInLeft" data-wow-delay="100ms" data-wow-duration="1000ms">We have created a cloud based tool to do your all boring tasks related to data analysis and decesion making based on the nature of data!</p>
+                    <span class="sub-title">Your Poultry Management Partner</span>
+                    <h1 class="wow animate__animated animate__fadeInLeft" data-wow-delay="00ms" data-wow-duration="1000ms">Digitize.Track.Manage</h1>
+                    <p class="wow animate__animated animate__fadeInLeft" data-wow-delay="100ms" data-wow-duration="1000ms">
+                        Embrace mobile-based solutions, transforming your smartphone into a digital farm book. Bid farewell to paper chaos with cloud-based solutions 
+                        accessible on any device, anytime and in real-time, focus on what truly matters: your farm.
+                        We employ a Plan-Do-Check-Act cycle, where it helps identify what you intended to do, what you have done, and where you need to make changes to 
+                        perform better in the future.
+                    </p>
                     <div class="btn-box">
-                        <a href="about-us-3.html" class="default-btn wow animate__animated animate__fadeInRight" data-wow-delay="200ms" data-wow-duration="1000ms"><i class="flaticon-right"></i>About Us<span></span></a>
+                        <a routerLink="/contact-us" class="default-btn wow animate__animated animate__fadeInRight" data-wow-delay="200ms" data-wow-duration="1000ms">
+                           Get Started<span></span>
+                        </a>
                     </div>
                 </div>
             </div>
 
             <div class="col-lg-7 col-md-12">
                 <div class="banner-wrapper-image wow animate__animated animate__fadeInUp" data-tilt="" data-wow-delay="00ms" data-wow-duration="1000ms">
-                    <img src="assets/img/banner-img2.png" alt="image">
+                    <img src="assets/img/project-start1.png" alt="image">
                 </div>
             </div>
         </div>
