--- a/src/app/partials/footer-component/footer-component.component.html
+++ b/src/app/partials/footer-component/footer-component.component.html
@@ -3,13 +3,13 @@
         <div class="row">
             <div class="col-lg-4 col-md-6 col-sm-6">
                 <div class="single-footer-widget">
-                    <a href="index.html" class="logo black-logo">
-                        <img src="assets/img/logo.png" alt="logo">
+                    <a routerLink="/" class="logo black-logo">
+                        <img src="assets/img/IGC.png" alt="footer-logo" style="height: 120px; width: auto;">
                     </a>
                     <a href="index.html" class="logo white-logo">
                         <img src="assets/img/white-logo.png" alt="logo">
                     </a>
-                    <p>Lorem ipsum dolor sit amet, consectetur elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Quis ipsum suspendisse.</p>
+                    <p>Follow us on our socials.</p>
                     <ul class="social-link">
                         <li><a href="#" class="d-block" target="_blank"><i class='bx bxl-facebook'></i></a></li>                        
                         <li><a href="#" class="d-block" target="_blank"><i class='bx bxl-linkedin'></i></a></li>
@@ -23,8 +23,8 @@
                     <ul class="footer-links-list">
                         <li><a routerLink="" routerLinkActive="router-link-active" ariaCurrentWhenActive="page" >Home</a></li>
                         <li><a routerLink="/about-us" routerLinkActive="router-link-active" ariaCurrentWhenActive="page">Company</a></li>
-                        <li><a href="case-studies-2-columns.html">Case Studies</a></li>
-                        <li><a href="blog-1.html">Our Blog</a></li>
+                        <li><a href="javascript:void(0);">Case Studies</a></li>
+                        <li><a routerLink="/blog" routerLinkActive="router-link-active" ariaCurrentWhenActive="page">Our Blog</a></li>
                         <li><a routerLink="contact-us" routerLinkActive="router-link-active">Contact</a></li>
                     </ul>
                 </div>
