--- a/src/app/partials/header-component/header-component.component.html
+++ b/src/app/partials/header-component/header-component.component.html
@@ -5,13 +5,13 @@
         <div class="container">
             <div class="tracer-responsive-menu">
                 <div class="logo black-logo">
-                    <a href="index.html">
-                        <img src="assets/img/logo.png" alt="logo">
+                    <a routerLink="" routerLinkActive="router-link-active" ariaCurrentWhenActive="page">
+                        <img src="assets/img/IGC.png" alt="logo" style="height:80px; width: auto;">
                     </a>
                 </div>
                 <div class="logo white-logo">
-                    <a href="index.html">
-                        <img src="assets/img/white-logo.png" alt="logo">
+                    <a routerLink="" routerLinkActive="router-link-active" ariaCurrentWhenActive="page">
+                        <img src="assets/img/white-IGC.png" alt="logo" style="height:80px; width: auto;">
                     </a>
                 </div>
             </div>
@@ -21,57 +21,53 @@
     <div class="tracer-nav">
         <div class="container-fluid">
             <nav class="navbar navbar-expand-md navbar-light">
-                <a class="navbar-brand black-logo" href="index.html">
-                    <img src="assets/img/logo.png" alt="logo">
+                <a class="navbar-brand black-logo" routerLink="" routerLinkActive="router-link-active" ariaCurrentWhenActive="page">
+                    <img src="assets/img/IGC.png" alt="logo" style="height:100px; width: auto;">
                 </a>
-                <a class="navbar-brand white-logo" href="index.html">
-                    <img src="assets/img/white-logo.png" alt="logo">
+                <a class="navbar-brand white-logo" routerLink="" routerLinkActive="router-link-active" ariaCurrentWhenActive="page">
+                    <img src="assets/img/IGC-icon.png" alt="logo" style="height:100px; width: auto;">
                 </a>
 
                 <div class="collapse navbar-collapse mean-menu">
-                    <ul class="navbar-nav">
+                    <ul class="navbar-nav d-flex align-items-center">
                         <li class="nav-item"><a class="nav-link" routerLink="" routerLinkActive="router-link-active" ariaCurrentWhenActive="page">Home</a></li>
                         <li class="nav-item">
                             <a class="nav-link" routerLink="about-us" routerLinkActive="router-link-active" ariaCurrentWhenActive="page">About Us</a>
                         </li>
-
                         <li class="nav-item"><a href="#" class="nav-link">Modules <i class='bx bx-chevron-down'></i></a>
                             <ul class="dropdown-menu">
-                                <li class="nav-item"><a href="services-1.html" class="nav-link">Services One</a></li>
+                                <li class="nav-item"><a href="services-1.html" class="nav-link">Breeder Management</a></li>
 
-                                <li class="nav-item"><a href="services-2.html" class="nav-link">Services Two</a></li>
+                                <li class="nav-item"><a href="services-2.html" class="nav-link">Broiler Management</a></li>
 
-                                <li class="nav-item"><a href="services-3.html" class="nav-link">Services Three</a></li>
+                                <li class="nav-item"><a href="services-3.html" class="nav-link">Hatchery Management</a></li>
 
-                                <li class="nav-item"><a href="services-4.html" class="nav-link">Services Four</a></li>
+                                <li class="nav-item"><a href="services-4.html" class="nav-link">Layer Management</a></li>
 
-                                <li class="nav-item"><a href="services-5.html" class="nav-link">Services Five</a></li>
+                                <li class="nav-item"><a href="services-5.html" class="nav-link">Feed Mill Management</a></li>
 
-                                <li class="nav-item"><a href="services-6.html" class="nav-link">Services Six</a></li>
+                                <li class="nav-item"><a href="services-6.html" class="nav-link">Veterinary Management</a></li>
 
-                                <li class="nav-item"><a href="services-7.html" class="nav-link">Services Seven</a></li>
+                                <li class="nav-item"><a href="services-7.html" class="nav-link">Finance Module</a></li>
 
-                                <li class="nav-item"><a href="services-8.html" class="nav-link">Services Eight</a></li>
+                                <li class="nav-item"><a href="services-8.html" class="nav-link">Egg Packing</a></li>
 
-                                <li class="nav-item"><a href="#" class="nav-link">Services Details <i class='bx bx-chevron-right'></i></a>
-                                    <ul class="dropdown-menu">
-                                        <li class="nav-item"><a href="single-services-1.html" class="nav-link">Default</a></li>
-
-                                        <li class="nav-item"><a href="single-services-2.html" class="nav-link">With Image Slider</a></li>
-                                    </ul>
-                                </li>
-                            </ul>
+                                <li class="nav-item"><a href="services-8.html" class="nav-link">Processing Management</a></li>                                
+                            </ul>                        
                         </li>
+                        <li class="nav-item"><a class="nav-link" routerLink="/blog" routerLinkActive="router-link-active" ariaCurrentWhenActive="page">Blog</a></li>
 
-                        <li class="nav-item"><a class="nav-link" routerLink="/contact-us" routerLinkActive="router-link-active" ariaCurrentWhenActive="page">Contact Us</a></li>
-                        
+                        <li class="nav-item"><a class="nav-link" routerLink="/contact-us" routerLinkActive="router-link-active" ariaCurrentWhenActive="page">Contact Us</a></li>                        
                     </ul>
 
-                    <div class="others-option d-flex align-items-center">
+                    <!-- <div class="others-option d-flex align-items-center">
                         <div class="option-item">
-                            <a href="contact.html" class="default-btn"><i class="flaticon-right"></i>Book a Demo<span></span></a>
+                            <a href="#" class="default-btn">
+                                <i class="flaticon-right" onclick="Calendly.initPopupWidget({url: 'https://calendly.com/mike-waweru-ebit-plus/igc-demo-request?hide_gdpr_banner=1'});return false;"></i>
+                                Book a Demo<span></span>
+                            </a>                            
                         </div>
-                    </div>
+                    </div> -->
                 </div>
             </nav>
         </div>
