--- a/src/app/pages/home-component/home-component.component.html
+++ b/src/app/pages/home-component/home-component.component.html
@@ -1,6 +1,6 @@
 
 
-<div class="seo-agency-banner">
+<div class="seo-agency-banner" style="margin-left: 50px;">
     <div class="container-fluid">
         <div class="row align-items-center">
             <div class="col-lg-5 col-md-12">
@@ -8,9 +8,8 @@
                     <span class="sub-title">Your Poultry Management Partner</span>
                     <h1 class="wow animate__animated animate__fadeInLeft" data-wow-delay="00ms" data-wow-duration="1000ms">Digitize.Track.Manage</h1>
                     <p class="wow animate__animated animate__fadeInLeft" data-wow-delay="100ms" data-wow-duration="1000ms">
-                        Embrace mobile-based solutions, transforming your smartphone into a digital farm book. Bid farewell to paper chaos with cloud-based solutions 
-                        accessible on any device, anytime and in real-time, focus on what truly matters: your farm.
-                        We employ a Plan-Do-Check-Act cycle, where it helps identify what you intended to do, what you have done, and where you need to make changes to 
+                        Embrace mobile-based solutions, transforming your smartphone into a digital farm book. We employ a Plan-Do-Check-Act cycle,
+                        where it helps identify what you intended to do, what you have done, and where you need to make changes to
                         perform better in the future.
                     </p>
                     <div class="btn-box">
@@ -29,3 +28,93 @@
         </div>
     </div>
 </div>
+
+<section class="process-area ptb-100 bg-fafafb">
+  <div class="container">
+      <div class="section-title">
+          <span class="sub-title"><img src="assets/img/star-icon.png" alt="image"> Our Working Process</span>
+          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna.</p>
+      </div>
+
+      <div class="row align-items-center m-0">
+          <div class="col-lg-6 col-md-12 p-0">
+              <div class="process-image wow animate__animated animate__fadeInUp" data-tilt="" data-wow-delay="00ms" data-wow-duration="1500ms">
+                  <img src="assets/img/process/img7.png" alt="image">
+              </div>
+          </div>
+
+          <div class="col-lg-6 col-md-12 p-0">
+              <div class="process-content">
+                  <div class="row">
+                      <div class="col-lg-12 col-md-6">
+                          <div class="single-box-item wow animate__animated animate__fadeInUp" data-wow-delay="100ms" data-wow-duration="1500ms">
+                              <div class="d-flex align-items-center">
+                                  <div class="image">
+                                      <img src="assets/img/process/img-small1.png" alt="image">
+                                  </div>
+                                  <h3>Frame the Problem</h3>
+                                  <div class="number">1</div>
+                              </div>
+                          </div>
+                      </div>
+                      <div class="col-lg-12 col-md-6">
+                          <div class="single-box-item wow animate__animated animate__fadeInUp" data-wow-delay="300ms" data-wow-duration="1500ms">
+                              <div class="d-flex align-items-center">
+                                  <div class="image">
+                                      <img src="assets/img/process/img-small1.png" alt="image">
+                                  </div>
+                                  <h3>Collect the Raw Data</h3>
+                                  <div class="number">2</div>
+                              </div>
+                          </div>
+                      </div>
+                      <div class="col-lg-12 col-md-6">
+                          <div class="single-box-item wow animate__animated animate__fadeInUp" data-wow-delay="500ms" data-wow-duration="1500ms">
+                              <div class="d-flex align-items-center">
+                                  <div class="image">
+                                      <img src="assets/img/process/img-small1.png" alt="image">
+                                  </div>
+                                  <h3>Process the Data</h3>
+                                  <div class="number">3</div>
+                              </div>
+                          </div>
+                      </div>
+                      <div class="col-lg-12 col-md-6">
+                          <div class="single-box-item wow animate__animated animate__fadeInUp" data-wow-delay="700ms" data-wow-duration="1500ms">
+                              <div class="d-flex align-items-center">
+                                  <div class="image">
+                                      <img src="assets/img/process/img-small4.png" alt="image">
+                                  </div>
+                                  <h3>Explore the Data</h3>
+                                  <div class="number">4</div>
+                              </div>
+                          </div>
+                      </div>
+                      <div class="col-lg-12 col-md-6">
+                          <div class="single-box-item wow animate__animated animate__fadeInUp" data-wow-delay="900ms" data-wow-duration="1500ms">
+                              <div class="d-flex align-items-center">
+                                  <div class="image">
+                                      <img src="assets/img/process/img-small5.png" alt="image">
+                                  </div>
+                                  <h3>Perform Analysis</h3>
+                                  <div class="number">5</div>
+                              </div>
+                          </div>
+                      </div>
+                      <div class="col-lg-12 col-md-6">
+                          <div class="single-box-item wow animate__animated animate__fadeInUp" data-wow-delay="1000ms" data-wow-duration="1500ms">
+                              <div class="d-flex align-items-center">
+                                  <div class="image">
+                                      <img src="assets/img/process/img-small6.png" alt="image">
+                                  </div>
+                                  <h3>Communicate Results</h3>
+                                  <div class="number">6</div>
+                              </div>
+                          </div>
+                      </div>
+                  </div>
+              </div>
+          </div>
+      </div>
+  </div>
+</section>
