--- a/src/app/partials/footer-component/footer-component.component.html
+++ b/src/app/partials/footer-component/footer-component.component.html
@@ -4,14 +4,14 @@
             <div class="col-lg-4 col-md-6 col-sm-6">
                 <div class="single-footer-widget">
                     <a routerLink="/" class="logo black-logo">
-                        <img src="assets/img/IGC.png" alt="footer-logo" style="height: 120px; width: auto;">
+                        <img src="assets/img/IGC.png" alt="footer-logo" style="height: 90px; width: auto;">
                     </a>
-                    <a href="index.html" class="logo white-logo">
-                        <img src="assets/img/white-logo.png" alt="logo">
+                    <a routerLink="/" class="logo white-logo">
+                        <img src="assets/img/IGC-icon.png" alt="footer-logo-dark" style="height: 90px; width: auto;">
                     </a>
                     <p>Follow us on our socials.</p>
                     <ul class="social-link">
-                        <li><a href="#" class="d-block" target="_blank"><i class='bx bxl-facebook'></i></a></li>                        
+                        <li><a href="#" class="d-block" target="_blank"><i class='bx bxl-facebook'></i></a></li>
                         <li><a href="#" class="d-block" target="_blank"><i class='bx bxl-linkedin'></i></a></li>
                     </ul>
                 </div>
@@ -32,13 +32,13 @@
 
             <div class="col-lg-2 col-md-6 col-sm-6">
                 <div class="single-footer-widget">
-                    <h3>Resources</h3>
+                    <h3>Modules</h3>
                     <ul class="footer-links-list">
-                        <li><a href="team-1.html">Our Scientists</a></li>
-                        <li><a href="services-1.html">Our Services</a></li>
-                        <li><a href="testimonials.html">Testimonials</a></li>
-                        <li><a href="single-services-1.html">SaaS Solutions</a></li>
-                        <li><a href="single-services-2.html">eCommerce</a></li>
+                        <li><a href="team-1.html">Finance</a></li>
+                        <li><a href="services-1.html">Veterinary</a></li>
+                        <li><a href="testimonials.html">Layer Management</a></li>
+                        <li><a href="single-services-1.html">Broiler Management</a></li>
+                        <li><a href="single-services-2.html">More Modules</a></li>
                     </ul>
                 </div>
             </div>
